--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "@dantasdev/taiga-sprint-burndown",
   "version": "0.1.0",
   "description": "todo",
-  "main": "content.js",
+  "main": "/src/content.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
   },
   "keywords": [],
   "author": "dantas-dev",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "vite": "^5.4.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.5.4"
+  }
 }
