--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Taiga Sprint Burndown - Copy",
+  "name": "Taiga Sprint Burndown",
   "version": "0.1",
   "icons": {
     "32": "public/icon32.png",
