--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,7 +21,8 @@
         "<all_urls>"
       ],
       "js": [
-        "content.js"
+        "content.js",
+        "popup.js"
       ]
     }
   ],
