--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,11 +18,10 @@
   "content_scripts": [
     {
       "matches": [
-        "<all_urls>"
+        "https://taiga.solarmarket.com.br/*"
       ],
       "js": [
-        "content.js",
-        "popup.js"
+        "content.js"
       ]
     }
   ],
@@ -30,7 +29,6 @@
     "default_popup": "popup.html"
   },
   "host_permissions": [
-    "http://*/*",
-    "https://*/*"
+    "https://taiga.solarmarket.com.br/*"
   ]
 }
