Corrige horas new e atualiza as permissões (#10)
* feat/adiciona-ts-e-vite

* fix/manifest-title

* feat: #76 (organiza estrutura e adiciona TS (vite))

* gerando arquivo crx automaticamente

* alteração do local do manifest e do arquivo.crx

* corrige as new horas e atualiza as permissões

* adiciona variaveis de ambiente e cria função para ultiliza-la

---------

Co-authored-by: manupilation <manupilation.dev@gmail.com>
Co-authored-by: manupilation <emanoelmattos13@gmail.com>
Co-authored-by: Daniel Vinícius <viniccius774@gmail.com>

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,11 +18,10 @@
   "content_scripts": [
     {
       "matches": [
-        "<all_urls>"
+        "${VITE_TAIGA_URL}"
       ],
       "js": [
-        "content.js",
-        "popup.js"
+        "content.js"
       ]
     }
   ],
@@ -30,7 +29,6 @@
     "default_popup": "popup.html"
   },
   "host_permissions": [
-    "http://*/*",
-    "https://*/*"
+    "${VITE_TAIGA_URL}"
   ]
 }
