--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vite-plugin-static-copy": "^1.0.6"
   },
   "dependencies": {
-    "crx": "^5.0.1"
+    "crx": "^5.0.1",
+    "dotenv": "^16.4.5"
   }
 }
