Add elementos na pagina (#12)
* docs: update readme.md

* gera-pack

* feat/adiciona-ts-e-vite

* fix/manifest-title

* feat: #76 (organiza estrutura e adiciona TS (vite))

* gerando arquivo crx automaticamente

* alteração do local do manifest e do arquivo.crx

---------

Co-authored-by: manupilation <manupilation.dev@gmail.com>
Co-authored-by: manupilation <emanoelmattos13@gmail.com>
Co-authored-by: Daniel Vinícius <viniccius774@gmail.com>

* Quantidade de tasks e horas por pessoas (#4)

* feat/adiciona-ts-e-vite

* fix/manifest-title

* feat: #76 (organiza estrutura e adiciona TS (vite))

* gerando arquivo crx automaticamente

* alteração do local do manifest e do arquivo.crx

* feat: #79 (add report de quantidade de tasks e horas por pessoa)

---------

Co-authored-by: manupilation <manupilation.dev@gmail.com>
Co-authored-by: manupilation <emanoelmattos13@gmail.com>
Co-authored-by: Vinicius Barbosa <yuribarbosa48@hotmail.com>

* Adiciona horas new (#5)

* fix/adiciona-checagem-de-tipo-nan

* fix/adiciona-checagem-de-tipo-nan

* Ordena os cards por hora, contabiliza apenas as tasks com tag closed e botão de copy (#7)

* feat/adiciona-ts-e-vite

* fix/manifest-title

* feat: #76 (organiza estrutura e adiciona TS (vite))

* gerando arquivo crx automaticamente

* alteração do local do manifest e do arquivo.crx

* feat: #79 (add report de quantidade de tasks e horas por pessoa)

* feat: #79 (ordena as informações dos membros por hora)

* adiciona botão de copiar conteudo

* adiciona botão de copiar conteudo

* ajusta readme

* fix: contabiliza apenas os cards com tag closed

* docs: update readme

* atualiza readme

---------

Co-authored-by: manupilation <manupilation.dev@gmail.com>
Co-authored-by: manupilation <emanoelmattos13@gmail.com>
Co-authored-by: Vinicius Barbosa <yuribarbosa48@hotmail.com>

* Corrige horas new (#8)

* fix/adiciona-checagem-de-tipo-nan

* fix/adiciona-checage

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,7 +21,8 @@
         "${VITE_TAIGA_URL}"
       ],
       "js": [
-        "content.js"
+        "content.js",
+        "popup.js"
       ]
     }
   ],
